added flex to skills section

--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,7 @@
 																							<!-- /react-text --><a class="acr-rename ffssp cyan" data-sectionid="d4a4c83f-9a6f-40ae-8430-827cc85796c3">Rename</a>
 																						</div>
 																					</div>
-																					<div class="sortableInner">
+																					<div class="sortableInner my-skills">
 																						<div class="SortableItem pr">
 																							<div class="wrapper-bg pa dn" style="left: -80px; right: -80px;">
 																							</div>
