Modified personal information section in resume

--- a/index.html
+++ b/index.html
@@ -768,28 +768,17 @@
                                                 <div class="address">
                                                   <div class="singlecolumn">
                                                     <div dependency="STRT|CITY|STAT|ZIPC">
-                                                      <div class="txtBold">
-                                                        Address
+                                                      <div class="txtBold mt5" dependency="EMAI">
+                                                        E-mail
                                                       </div>
-                                                      <div class="field" id="FIELD_STRT">
-                                                        4rth Cross Nayanapanahalli
-                                                        Main Road, Bangalore
+                                                      <div dependency="EMAI" class="word-break">
+                                                        <span class="field" id="FIELD_EMAI">kakarganpat@gmail.com</span>
                                                       </div>
-                                                      <span class="field" id="FIELD_STAT">KARNATAKA</span><span
-                                                        dependency="STAT+ZIPC">,</span>
-                                                      <span class="field" id="FIELD_ZIPC">560068</span>
                                                     </div>
                                                     <div class="txtBold mt5" dependency="HPHN|CPHN">
                                                       Phone </div>
                                                     <div dependency="HPHN">
                                                       <span class="field" id="FIELD_HPHN">8197354601</span>
-                                                    </div>
-
-                                                    <div class="txtBold mt5" dependency="EMAI">
-                                                      E-mail
-                                                    </div>
-                                                    <div dependency="EMAI" class="word-break">
-                                                      <span class="field" id="FIELD_EMAI">kakarganpat@gmail.com</span>
                                                     </div>
                                                   </div>
                                                   <div dependency="SOCL">
@@ -797,11 +786,11 @@
                                                     <div id="CATEGORY_SOCIAL_SOCL" class="mt5">
                                                       <span id="DOCDATAINFO_SOCL" class="txtBold">LinkedIn</span><br>
                                                       <span
-                                                        id="FIELD_SOCL">https://www.linkedin.com/in/ganpat-kakar-7a6304b0/</span>
+                                                        id="FIELD_SOCL"><a target="blank" href="https://www.linkedin.com/in/ganpat-kakar-7a6304b0/">https://www.linkedin.com/in/ganpat-kakar-7a6304b0/</a></span>
                                                     </div>
                                                     <div id="CATEGORY_SOCIAL_SOCL" class="mt5">
                                                       <span id="DOCDATAINFO_SOCL" class="txtBold">WWW</span><br>
-                                                      <span id="FIELD_SOCL">http://gkchart.com/</span>
+                                                      <span id="FIELD_SOCL"><a target="blank" href="http://gkchart.com/">http://gkchart.com/</a></span>
                                                     </div>
                                                   </div>
                                                 </div>
