--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                                                   <p><a
                                                       href="https://github.com/Ganpatkakar">https://github.com/Ganpatkakar</a>
                                                   </p>
+                                                  <p><a
+                                                      href="https://ganpatkakar.github.io/ganpatkakar-portfolio/">Portfolio</a>
+                                                  </p>
                                                   <p>Accomplished 5 years as a Software Engineer with developing
                                                     various web applications and product development. My previous work
                                                     experience taught me a lot about development, web application development and
